Set z-index for front card to prevent the back card from going over and set z-inde for bg-card to position it behind content

--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ html{
 }
 #front-card{
     position: relative;
+    z-index: 1;
 }
 .bg-card{
     position: absolute;
+    z-index: -1;
 }
